2007-07-01  Ian Jackson  <ian@davenant.greenend.org.uk>

	* scripts/dpkg-source.pl: Don't remove setgid bits
	on directories when extracting the .orig tarball
	since the user might prefer to have them. Also don't
	manually override user and group for extracted
	directories. Instead we will take tar take of most
	of that.
	(extracttar): Explicetly specify --no-same-owner
	and --no-same-permissions. They are default anyway
	for non-root users, but no need to handle the source
	differently (i.e. more carelessly) if working as root.
	Since tar still insists on honoring the file permissions in the
	tar ball, fix them up so that they match what the user would
	expect according to his umask.

2007-06-12  Jiří Paleček  <jpalecek@web.de>

	* dpkg-shlibdeps.pl: Support colon separated list of paths in the
	ELF RPATH field.

2007-06-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl: Move check for existence of $override
	outside load_override. Move load_override after having filled the
	%packages information.
	(load_override): Assume $override is always defined.

2007-06-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.shelf'.

2007-06-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl (%archadded): Move to an outer scope to
	avoid duped entries in the output Architecture field.

2007-05-24  Guillem Jover  <guillem@debian.org>

	* ostable: Add gnulp-linux.
	* triplettable: Add gnulp-linux-i386 to lpia mapping.

2007-05-24  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.5~.

2007-05-24  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.4.

2007-05-24  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (debarch_to_debtriplet): Match exactly 'any'
	or 'all', recognize again 'linux-<arch>', and do not accept unknown
	debtriplets.
	(debwildcard_to_debtriplet): New function.