@@ -29,6 +29,8 @@ dpkg (1.14.5) UNRELEASED; urgency=low
     tar balls to match more the user's preferences instead of
     ours or the ones from the originator of the tar ball. Patch
     by Ian Jackson. Closes: #390915, #207289
+  * dpkg-source warns now about new empty files since those will
+    not be represented in the diff. Closes: #383394
   
   [ Updated dselect translations ]
   * French (Christian Perrier)
