@@ -1,3 +1,8 @@
+2007-07-01  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: Warn that newly created empty files are
+	not currently represented in the diff.
+
 2007-07-01  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* scripts/dpkg-source.pl: Don't remove setgid bits
